--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,36 @@
 .app-body{
   padding: 20px;
 }
+
+.head-title{
+  position: fixed;
+  height: 60px;
+  width: 100%;
+  background-color: aqua;
+  z-index: 9;
+}
+
+.head-child{
+  margin-top: 60px;
+}
+
+.products{
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+}
+
+.card{
+  display: flex;
+  align-items: center;
+  border: 1px solid black;
+  overflow: hidden;
+  width: 400px;
+  margin: 20px;
+  padding: 10px;
+}
+
+.card > img{
+  width: 300px;
+  height: 300px;
+}
